fix(frontend): campaign preview height on mobile

--- a/packages/frontend/src/components/create-campaign/preview/styles.module.css
+++ b/packages/frontend/src/components/create-campaign/preview/styles.module.css
@@ -1,5 +1,7 @@
 .root {
-    @apply flex
+    @apply h-full
+        sm:h-auto
+        flex
         flex-col
         sm:min-w-[750px]
         bg-gray-100
